支持hitl-20260423